--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/sushi.png" />
     <link rel="stylesheet" href="css/style.css">
-    <title>Sushiman</title>
+    <title>Corinthians</title>
   </head>
   <body>
     <header>
       <nav class="header__nav">
         <div class="header__logo">
-          <h4 data-aos="fade-down">Sushiman</h4>
+          <h4 data-aos="fade-down">Sport Club Corinthians Paulista</h4>
           <div class="header__logo-overlay"></div>
         </div>
 
@@ -21,13 +21,13 @@
             <a href="#menu">Menu</a>
           </li>
           <li>
-            <a href="#food">Food</a>
+            <a href="#food">History</a>
           </li>
           <li>
-            <a href="#services">Services</a>
+            <a href="#services">News </a>
           </li>
           <li>
-            <a href="#about-us">About Us</a>
+            <a href="#about-us">Titles </a>
           </li>
           <li>
             <img src="assets/search.svg" alt="search" />
@@ -44,16 +44,11 @@
 
     <section class="hero">
       <div class="hero-image">
-        <img 
-          src="assets/sushi-1.png"
+        <img
+          src="assets/corinthians-logo.png"
           alt="sushi"
           data-aos="fade-up"
         />
-        <h2 data-aos="fade-up">
-          日 <br />
-          本 <br />
-          食
-        </h2>
 
         <div class="hero-image__overlay"></div>
       </div>
