--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#services">News </a>
           </li>
           <li>
-            <a href="#about-us">Titles </a>
+            <a href="#about-us">Store </a>
           </li>
           <li>
             <img src="assets/search.svg" alt="search" />
@@ -45,7 +45,7 @@
     <section class="hero">
       <div class="hero-image">
         <img
-          src="assets/corinthians-logo.png"
+          src="assets/corinthians-1.jpeg"
           alt="sushi"
           data-aos="fade-up"
         />
@@ -55,9 +55,7 @@
 
       <div class="hero-content">
         <div class="hero-content-info" data-aos="fade-left">
-          <h1>Feel the taste of Japanese food</h1>
-          <p>Feel the taste of the most popular Japanese food from anywhere and anytime.</p>
-
+          <h1>Aqui é Corinthians</h1>
           <div class="hero-content__buttons">
             <button class="hero-content__order-button">Order Now</button>
             <button class="hero-content__play-button">
