--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <section class="hero">
       <div class="hero-image">
         <img
-          src="assets/corinthians-1.jpeg"
-          alt="sushi"
+          src="assets/corinthians-torcida.jpeg"
+          alt="corinthians-torcida"
           data-aos="fade-up"
         />
 
