--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <ul class="header__menu" data-aos="fade-down">
           <li>
-            <a href="#menu">Menu</a>
+            <a href="#menu">Forum</a>
           </li>
           <li>
             <a href="#food">History</a>
@@ -57,7 +57,7 @@
         <div class="hero-content-info" data-aos="fade-left">
           <h1>Aqui é Corinthians</h1>
           <div class="hero-content__buttons">
-            <button class="hero-content__order-button">Order Now</button>
+            <button class="hero-content__order-button">Buy your shirt here</button>
             <button class="hero-content__play-button">
               <img src="assets/play-circle.svg" alt="play" />
               How to Order
@@ -67,8 +67,8 @@
 
         <div class="hero-content__testimonial" data-aos="fade-up">
           <div class="hero-content__customer flex-center">
-            <h4>24<span>k+</span></h4>
-            <p>Happy Customers</p>
+            <h4>35<span>M+</span></h4>
+            <p>Fans</p>
           </div>
 
           <div class="hero-content__review">
