--- a/index.html
+++ b/index.html
@@ -72,34 +72,36 @@
           </div>
 
           <div class="hero-content__review">
-            <img src="assets/user.png" alt="user" />
-            <p>"This is the best Japanese food delivery service that ever existed."</p>
+            <img src="assets/corinthians-logo.png" alt="user" />
+            <p>The only brazilian club to win the FIFA World club twice </p>
           </div>
         </div>
       </div>
     </section>
 
+    
+
     <section class="about-us" id="about-us">
       <div class="about-us__image">
         <div class="about-us__image-sushi3">
-          <img src="assets/sushi-3.png" alt="sushi" data-aos="fade-right" />
+          <img src="assets/corinthians-logo2.png" alt="sushi" data-aos="fade-right" />
         </div>
 
         <button class="about-us__button">
-          Learn More
-
+          Make a post!
           <img src="assets/arrow-up-right.svg" alt="learn more" />
         </button>
 
         <div class="about-us__image-sushi2">
-          <img src="assets/sushi-2.png" alt="sushi"  data-aos="fade-right" />
+          <img src="assets/corinthians-logo3.png" alt="sushi"  data-aos="fade-right" />
         </div>
       </div>
 
       <div class="about-us__content"  data-aos="fade-left">
-        <p class="sushi__subtitle">About Us / 私たちに関しては</p>
-        <h3 class="sushi__title">Our mission is to bring true Japanese flavours to you.</h3>
-        <p class="sushi__description">We will continue to provide the experience of Omotenashi, the Japanese mindset of hospitality, with our shopping and dining for our customers.
+        <p class="sushi__subtitle"> Corinthians Forum</p>
+        <h3 class="sushi__title">Share your Corinthians story or opinion with us</h3>
+        <p class="sushi__description">
+          Click on Make a Post and be directed to our page containing the voice of Corinthians supporters
         </p>
       </div>
     </section>
