--- a/index.html
+++ b/index.html
@@ -107,32 +107,32 @@
     </section>
 
     <section class="popular-foods" id="menu">
-      <h2 class="popular-foods__title" data-aos="flip-up">Popular Food / 人気</h2>
+      <h2 class="popular-foods__title" data-aos="flip-up"> Store </h2>
 
       <div class="popular-foods__filters sushi__hide-scrollbar" data-aos="fade-up">
         <button class="popular-foods__filter-btn active">All</button>
         <button class="popular-foods__filter-btn">
           <img src="/assets/sushi-9.png" alt="sushi 9" />
-          Sushi
+          Jackets
         </button>
         <button class="popular-foods__filter-btn">
           <img src="/assets/sushi-8.png" alt="sushi 8" />
-          Ramen
+          Retro
         </button>
         <button class="popular-foods__filter-btn">
           <img src="/assets/sushi-7.png" alt="sushi 7" />
-          Udon
+          Pants
         </button>
         <button class="popular-foods__filter-btn">
           <img src="/assets/sushi-6.png" alt="sushi 6" />
-          Danggo
+          Shirts
         </button>
         <button class="popular-foods__filter-btn">All</button>
       </div>
 
       <div class="popular-foods__catalogue" data-aos="fade-up">
         <article class="popular-foods__card">
-          <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12" />
+          <img class="popular-foods__card-image" src="assets/corinthians-store2.webp" alt="sushi-12" />
           <h4 class="popular-foods__card-title">Chezu Sushi</h4>
 
           <div class="popular-foods__card-details flex-between">
@@ -146,8 +146,8 @@
         </article>
 
         <article class="popular-foods__card active-card">
-          <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-11" />
-          <h4 class="popular-foods__card-title">Original Sushi</h4>
+          <img class="popular-foods__card-image" src="assets/corinthians-store.jpeg" alt="sushi-11" />
+          <h4 class="popular-foods__card-title">T-shirt 2022</h4>
           
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -155,7 +155,7 @@
               <p>5.0</p>
             </div>
             
-            <p class="popular-foods__card-price">$19.00</p>
+            <p class="popular-foods__card-price">$199.00</p>
           </div>
         </article>
 
