--- a/index.html
+++ b/index.html
@@ -127,13 +127,12 @@
           <img src="/assets/corinthians-logo.png" alt="sushi 6" />
           Shirts
         </button>
-        <button class="popular-foods__filter-btn">All</button>
       </div>
 
       <div class="popular-foods__catalogue" data-aos="fade-up">
         <article class="popular-foods__card">
           <img class="popular-foods__card-image" src="assets/corinthians-store2.webp" alt="sushi-12" />
-          <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+          <h4 class="popular-foods__card-title">T-shirt 2020</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -141,7 +140,7 @@
               <p>4.9</p>
             </div>
 
-            <p class="popular-foods__card-price">$21.00</p>
+            <p class="popular-foods__card-price">$219.00</p>
           </div>
         </article>
 
@@ -160,8 +159,8 @@
         </article>
 
         <article class="popular-foods__card">
-          <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-10" />
-          <h4 class="popular-foods__card-title">Ramen Legendo</h4>
+          <img class="popular-foods__card-image" src="assets/corinthians-shirt3.png" alt="sushi-10" />
+          <h4 class="popular-foods__card-title"> T-shirt 2019</h4>
 
           <div class="popular-foods__card-details flex-between">
             <div class="popular-foods__card-rating">
@@ -169,13 +168,13 @@
               <p>4.7</p>
             </div>
 
-            <p class="popular-foods__card-price">$13.00</p>
+            <p class="popular-foods__card-price">$139.00</p>
           </div>
         </article>
       </div>
 
       <button class="popular-foods__button">
-        Explore Food
+        Explore the store
         <img src="assets/arrow-right.svg"  alt="arrow-right" />
       </button>
     </section>
@@ -327,7 +326,7 @@
 
     <footer class="footer flex-between">
       <h3 class="footer__logo">
-        <span>Sushi</span>man
+        <span>CORINTHIANS</span>
       </h3>
 
       <ul class="footer__nav">
